--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor porro, vel!</li>
         <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, cumque earum?</li>
     </ul>
-    <h3>WORNING:</h3>
+    <h3>WARNING:</h3>
     <ol>
         <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum fugiat nemo nihil voluptate.</li>
         <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor dolore laborum non qui?</li>
